profile photo and some styles are updated and favicon and sql skill added

--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/> -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="icon" href="Images\s.svg" type="image/svg">
     
-    <title>Portfolio</title>
+    <title>Sahil Sapariya</title>
 </head>
 
 <body>
     <div class="route">
         <!-- <div class="cursor"></div> -->
         <div class="mini-img">
-            <img src="/Images/myProfilePhoto.jpg" alt="">
+            <img src="/Images/ppfinel.jpg" alt="">
         </div>
         <div class="home">
             
@@ -136,9 +137,9 @@
                     <div class="skill-icons-3-grp">
                         <div class="skill-box">
                             <div>
-                                <img src="/Images/sass.svg">
+                                <img src="/Images/mysql.webp">
                             </div>
-                            <span>SASS</span>
+                            <span>MySQL</span>
                         </div>
                         <div class="skill-box">
                             <div>
