Some bugs fixes and fixed social media icon

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                     <img src="/Images/contact.webp">
                 </div>
             </div>
-            <div class="socialmediamini hidden1">
+            <div class="socialmediamini"> <!-- // hidden1 -->
                 <ul>
                     <li><a href="https://github.com/sahilsapariya/"><img src="/Images/github.png"></a></li>
                     <li><a href="https://leetcode.com/sahil_sapariya/"><img src="/Images/leetcode.png"></a></li>
@@ -195,7 +195,7 @@
                     <li><a href="https://www.instagram.com/_sahil_sapariya_03/"><img src="/Images/insta.png"></a></li>
                 </ul>
             </div>
-            <div class="socialmedia display1" data-aos="fade-up">
+            <div class="socialmedia display1" style="display: none;">
                 <ul>
                     <li>
                         <a href="https://github.com/sahilsapariya/" target="_blank">
