animation for only one time and made social media icon open in new tab

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="home">
             
             <img src="/Images/pfinel.jpg">
-            <div class="name" data-aos="fade-right" id="nameonscroll">
+            <div class="name" data-aos="fade-right" data-aos-once="true" id="nameonscroll">
                 <div class="hii">Hello I am</div>
                 <div class="fullname">SAHIL SAPARIYA</div>
                 <div style="display: flex;">
@@ -48,14 +48,14 @@
             
         </div>
         <div class="about">
-            <div class="pythonprogramer" data-aos="fade-down-right" id="fullstackdev">
+            <div class="pythonprogramer" data-aos="fade-down-right" data-aos-once="true" id="fullstackdev">
                 <i>
                     <h1>Full Stack Webdeveloper</h1>
                 </i>
                 <span>A very well knowledge about web developing in flask python. Also know Datastructure and algorithm
                     and can do designing.</span>
             </div>
-            <div class="aboutMe" data-aos="fade-down-left" id="aboutme">
+            <div class="aboutMe" data-aos="fade-down-left" data-aos-once="true" id="aboutme">
                 <i>
                     <h1>About Me</h1>
                 </i>
@@ -66,9 +66,9 @@
 
         <div class="skills">
             <i>
-                <h1 data-aos="fade-down">Projects</h1>
+                <h1 data-aos="fade-down" data-aos-once="true">Projects</h1>
             </i>
-            <div class="skill-icons" data-aos="zoom-out">
+            <div class="skill-icons" data-aos="zoom-out" data-aos-once="true">
                 <div class="skill-icons-6-grp">
                     <div class="skill-icons-3-grp">
                         <div class="skill-box">
@@ -162,10 +162,10 @@
         <div class="contact">
             <div class="contact-heading">
                 <i>
-                    <h1 data-aos="fade-down">Let's get in touch</h1>
+                    <h1 data-aos="fade-down" data-aos-once="true">Let's get in touch</h1>
                 </i>
             </div>
-            <div class="contact-box" data-aos="zoom-out-up">
+            <div class="contact-box" data-aos="zoom-out-up" data-aos-once="true">
                 <div class="contact-photo hidden">
                     <img src="/Images/contact.webp">
                 </div>
@@ -189,10 +189,10 @@
             </div>
             <div class="socialmediamini"> <!-- // hidden1 -->
                 <ul>
-                    <li><a href="https://github.com/sahilsapariya/"><img src="/Images/github.png"></a></li>
-                    <li><a href="https://leetcode.com/sahil_sapariya/"><img src="/Images/leetcode.png"></a></li>
-                    <li><a href="https://www.linkedin.com/in/sahil-sapariya-894683224/"><img src="/Images/linkedin.png"></a></li>
-                    <li><a href="https://www.instagram.com/_sahil_sapariya_03/"><img src="/Images/insta.png"></a></li>
+                    <li><a href="https://github.com/sahilsapariya/" target="_blank"><img src="/Images/github.png"></a></li>
+                    <li><a href="https://leetcode.com/sahil_sapariya/" target="_blank"><img src="/Images/leetcode.png"></a></li>
+                    <li><a href="https://www.linkedin.com/in/sahil-sapariya-894683224/" target="_blank"><img src="/Images/linkedin.png"></a></li>
+                    <li><a href="https://www.instagram.com/_sahil_sapariya_03/" target="_blank"><img src="/Images/insta.png"></a></li>
                 </ul>
             </div>
             <div class="socialmedia display1" style="display: none;">
@@ -215,15 +215,6 @@
                             <span class="leetcode-img"><img src="/Images/leetcode.svg" alt="" srcset=""></span>
                         </a>
                     </li>
-                    <!-- <li>
-                        <a href="#" target="_blank">
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                            <span class="fa-brands fa-google-plus-g"></span>
-                        </a>
-                    </li> -->
                     <li>
                         <a href="https://www.linkedin.com/in/sahil-sapariya-894683224/" target="_blank">
                             <span></span>
