changed the icon of social media and fixed some bugs

--- a/index.html
+++ b/index.html
@@ -74,40 +74,40 @@
                         <div class="skill-box">
                             <div>
                                 <img src="/Images/python icon.png">
+                                <div>Python</div>
                             </div>
-                            <span>Python</span>
                         </div>
                         <div class="skill-box">
                             <div>
                                 <img src="/Images/react.png">
+                                <div>React</div>
                             </div>
-                            <span>React</span>
                         </div>
                         <div class="skill-box">
                             <div>
                                 <img src="/Images/java.png">
+                                <div>Java</div>
                             </div>
-                            <span>Java</span>
                         </div>
                     </div>
                     <div class="skill-icons-3-grp">
                         <div class="skill-box">
                             <div>
                                 <img src="Images/javascript.png">
+                                <div>JavaScript</div>
                             </div>
-                            <span>JavaScript</span>
                         </div>
                         <div class="skill-box">
                             <div>
                                 <img src="/Images/bootstrap.png">
+                                <div>Bootstrap</div>
                             </div>
-                            <span>Bootstrap</span>
                         </div>
                         <div class="skill-box">
                             <div>
                                 <img src="Images/c-.png">
+                                <div>C++</div>
                             </div>
-                            <span>C++</span>
                         </div>
                     </div>
                 </div>
@@ -118,40 +118,40 @@
                         <div class="skill-box">
                             <div>
                                 <img src="/Images/c.png">
+                                <div>C</div>
                             </div>
-                            <span>C</span>
                         </div>
                         <div class="skill-box">
                             <div>
                                 <img src="/Images/html.svg">
+                                <div>HTML</div>
                             </div>
-                            <span>HTML</span>
                         </div>
                         <div class="skill-box">
                             <div>
                                 <img src="/Images/css.png">
+                                <div>CSS</div>
                             </div>
-                            <span>CSS</span>
                         </div>
                     </div>
                     <div class="skill-icons-3-grp">
                         <div class="skill-box">
                             <div>
                                 <img src="/Images/mysql.webp">
+                                <div>MySQL</div>
                             </div>
-                            <span>MySQL</span>
                         </div>
                         <div class="skill-box">
                             <div>
                                 <img src="/Images/sass.svg">
+                                <div>SASS</div>
                             </div>
-                            <span>SASS</span>
                         </div>
                         <div class="skill-box">
                             <div>
                                 <img src="/Images/twcss.png">
+                                <div>Tailwind&nbsp;CSS</div>
                             </div>
-                            <span>Tailwind&nbsp;CSS</span>
                         </div>
                     </div>
                 </div>                
@@ -191,8 +191,8 @@
                 <ul>
                     <li><a href="https://github.com/sahilsapariya/" target="_blank"><img src="/Images/github.png"></a></li>
                     <li><a href="https://leetcode.com/sahil_sapariya/" target="_blank"><img src="/Images/leetcode.png"></a></li>
-                    <li><a href="https://www.linkedin.com/in/sahil-sapariya-894683224/" target="_blank"><img src="/Images/linkedin.png"></a></li>
-                    <li><a href="https://www.instagram.com/_sahil_sapariya_03/" target="_blank"><img src="/Images/insta.png"></a></li>
+                    <li><a href="https://www.linkedin.com/in/sahil-sapariya-894683224/" target="_blank"><img style="height: 55px; width: 55px;" src="/Images/linkedin.png"></a></li>
+                    <li><a href="https://www.instagram.com/_sahil_sapariya_03/" target="_blank"><img style="height: 55px; width: 55px;" src="/Images/insta.png"></a></li>
                 </ul>
             </div>
             <div class="socialmedia display1" style="display: none;">
