--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@
     </div>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>console.log("hello ankush")</script>
     <script>
         AOS.init();
     </script>
