completed the project catalog and added some animation to it

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             </div>
         </div>
 
-        <div class="project-container">
+        <div class="project-container" data-aos="flip-left" data-aos-once="true">
             <div class="image-container">
                 <a href="https://sahilsapariya03.netlify.app" target="_blank">
                     <img src="Images/my-portfolio.png" alt="portfolio website image">
@@ -168,6 +168,10 @@
                 <div class="desc-content">
                     <h1>My Portfolio</h1>
                     <p>A portfolio website for presenting my projects in an organized and decorated way.</p>
+                    <div class="project-icon-container">
+                        <img src="Images/html.svg" alt="html icon">
+                        <img src="Images/css.png" alt="css icon">
+                    </div>
                 </div>
                 <div class="relevant-links">
                     <a href="https://sahilsapariya03.netlify.app" target="_blank">DEMO</a>
@@ -177,7 +181,7 @@
         </div>
 
 
-        <div class="project-container">
+        <div class="project-container" data-aos="flip-right" data-aos-once="true">
             <div class="image-container">
                 <a href="https://todocentral.netlify.app" target="_blank">
                     <img src="Images/todocentral.png" alt="todocentral website image">
@@ -187,6 +191,9 @@
                 <div class="desc-content">
                     <h1>ToDo Central</h1>
                     <p>A todo website made with React JS for make daily todo list and routine easier.</p>
+                    <div class="project-icon-container">
+                        <img src="Images/react.png" alt="icon">
+                    </div>
                 </div>
                 <div class="relevant-links">
                     <a href="https://todocentral.netlify.app" target="_blank">DEMO</a>
@@ -225,7 +232,8 @@
                     <img src="/Images/contact.webp">
                 </div>
             </div>
-            <div class="socialmediamini"> <!-- // hidden1 -->
+            <div class="socialmediamini" data-aos="fade-up"
+            data-aos-anchor-placement="top-bottom" data-aos-once="true"> <!-- // hidden1 -->
                 <ul>
                     <li><a href="https://github.com/sahilsapariya/" target="_blank" title="Github"><img src="/Images/github.png"></a>
                     </li>
@@ -283,7 +291,6 @@
     </div>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>console.log("hello ankussahilh")</script>
     <script>
         AOS.init();
     </script>
